objects/Discovery_Question_Category__c.object
<CustomObject>
    <description>Junction Object between Dealership Need (a.k.a Question_Category__c) and Discovery Question</description>
    <fields>
        <fullName>DealershipNeed_Question_Ext_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>DealershipNeed Question Ext ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Discovery_Question__c</fullName>
        <label>Discovery Question</label>
        <referenceTo>Question__c</referenceTo>
        <relationshipName>Discovery_Question_Categories</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Migration_ID__c</fullName>
        <label>Migration ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question_Category__c</fullName>
        <label>Dealership Need</label>
        <referenceTo>Question_Category__c</referenceTo>
        <relationshipName>Discovery_Question_Categories</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Discovery Question Dealership Need</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>DQ-{00000000}</displayFormat>
        <label>DealershipNeedQuestion ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Discovery Question Dealership Needs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>IMP_CreateRecordForNoProductsOnly</fullName>
        <active>true</active>
        <description>Allow this junction object records to be created only for the Discovery Questions which does not have its child Discovery Question Product records</description>
        <errorConditionFormula>Discovery_Question__r.Count_of_Discovery_Question_Products__c &gt; 0</errorConditionFormula>
        <errorMessage>The Question selected must have no Discovery Question Product records related to it.</errorMessage>
    </validationRules>
</CustomObject>